Commit -  Admin chat